Atualização: 	Visualização e alterações de produto funcionando 	Inicio dos testes de upload de imagens

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Bem vindo parcero!</h1>
         <a href="GetProdutos">Listar Produtos</a>
-        <a href="CadastrarProdutos.jsp">Cadastrar Produtos</a>
+        <a href="PostProdutos">Cadastrar Produtos</a>
     </body>
 </html>
