Atualização: 	Ajustes de bugs

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,9 +3,14 @@
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=K2D:wght@700&display=swap" rel="stylesheet">
+        
+        <link href="padrao.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Bem vindo parcero!</h1>
+        <h1>BEM VINDO!</h1>
         <a href="GetProdutos">Listar Produtos</a>
         <a href="PostProdutos">Cadastrar Produtos</a>
     </body>
